# rust-finance-app

./: Cargo.toml  README.md
.github/workflows/: main.yaml
src/: main.rs
src/app/: mod.rs
src/app/entities/: account.rs  common.rs  mod.rs  test_account.rs  test_transaction.rs  transaction.rs
src/app/repositories/: account_repository.rs  mod.rs  transaction_repository.rs
src/app/services/: account_service.rs  mod.rs  test_account_service.rs  test_transaction_service.rs  transaction_service.rs
src/app/typing/: amount.rs  currency.rs  mod.rs  test_amount.rs
src/domain/entities/: account.rs  mod.rs  test_account.rs  transaction.rs
src/domain/repositories/: account_repository.rs  mod.rs
src/domain/value_objects/: currency.rs
src/infrastructure/database/repositories/in_memory/: account_repository.rs  mod.rs  test_account_repository.rs  test_transaction_repository.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/repositories/in_memory/: account_repository.rs  mod.rs  test_account_repository.rs  test_transaction_repository.rs  transaction_repository.rs
src/infrastructure/repositories/sqlite/: account_repository.rs  common.rs  mod.rs
src/interfaces/: mod.rs
src/interfaces/api/: accounts.rs  mod.rs  server.rs  state.rs
src/shared/: mod.rs  test_utilities.rs
tests/: integration_tests.rs
