[package]
name = "me-finance"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {  version = "0.4.41" }
rand = "0.9.2"
thiserror = "2.0.16"
actix-web = "4.11.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
env_logger = "0.11.8"
log = "0.4.27"
dotenvy = "0.15"
sqlite = { version = "0.37.0" }
serde = { version = "1.0.219", features = ["derive"] }
